# arts-using-openGL

./: .basic.c.swp  CMakeLists.txt  LICENSE  README.md  a.out  cafeWall.c  canvas.c  cubeTree.c  fern.c  fractal1.c  fractal2.c  hermanDot.c  home.c  line.c  logSpiral.c  pattern1.c  project.h  run.sh  sphere.c  spiral.c  taurus.c  vicsek.c
temp/: a.out  temp.c  temp2.c  temp3.c
